# BookScope

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.ja.md  README.md  README.zh.md  TODOS.md  book-analyzer-project-plan.md  landing.html  pyproject.toml  requirements.txt  sidebar_demo.html  test_book_ja.txt  test_book_zh.txt  viz-module-design.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.hypothesis/constants/: 02cedbd2d143bef7  05a04a68495ec146  079e6abf2f41fabb  0a023b884660747e  0aaabc27f9cb9130  0ff2e5c486dcf448  16c39bdfa7c91806  2c837a94669fd076  3865aab20960d5bc  3a045da77f1a3116  5b162c8fd550a079  60e5abc436d4bb59  640f0746e35ebf52  6a62367120c6815f  84fb8790dc2d194c  8b63d60b010f4990  8b8006d40dd15cc1  9022ef94cee96e63  90843ed190fb9eec  926079a0edabce87  9d92e45f45004e91  9ed4fd30336b5c5d  a77574e8a587bee5  b51aebc3d1aff9ce  c09f55d008bd49d7  cc0ee665389c1e01  d575d8ebe8bfe19e  db4873cfea15d41b  db8a6fe2f2588bec  ddb4e7f5d030d2dc  ec41d834767b717d
.hypothesis/tmp/: tmp0bfwdqlj  tmp0qyib4n0  tmp0tsvj2of  tmp1yf4_3rj  tmp_rnn6swx  tmp_teow3mi  tmp_vz358u7  tmpafn931ep  tmpblk__gu0  tmpe9q2ibo2  tmpim2qggwy  (+9 more)
.streamlit/: config.toml
app/: analysis_flow.py  css.py  demo_book.txt  main.py  sidebar.py  streaming_compat_test.py  strings.py  ui_constants.py
bookscope/: __init__.py  app_utils.py  config.py  insights.py
bookscope-frontend/: index.html  package-lock.json  package.json
scripts/: benchmark_embedding.py  download_demo.py  inject_analysis.py
tests/: test_answer_metrics.py  test_arc_classifier.py  test_book_chunker.py  test_card_renderer.py  test_chart_data_adapter.py  test_chat_context.py  test_chunker.py  test_cleaner.py  test_compare_page.py  test_data_depth.py  test_dataset.py  test_e2e_pipeline.py  test_embedding_provider.py  test_emotion_comparison_renderer.py  test_emotion_radar_renderer.py  test_emotion_timeline_renderer.py  test_eval_harness.py  test_genre_analyzer.py  test_heatmap.py  test_insights.py  test_knowledge_extractor.py  test_lexicon_analyzer.py  test_llm_analyzer.py  test_loader.py  test_models.py  test_multilingual.py  test_ner_extractor.py  test_quick_insight_smoke.py  test_relation_extractor.py  test_relation_graph_renderer.py  test_repository.py  test_reranker.py  test_retrieval_metrics.py  test_soul_engine.py  test_style_analyzer.py  test_style_radar.py  test_vector_store.py
(+133 files in other folders)
