[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bookscope/__init__.py"

[project]
name = "bookscope"
dynamic = ["version"]
description = "Multi-dimensional book text analysis and visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
    "pydantic>=2.6.0",
    "nrclex>=4.0.0",
    "textblob>=0.17.0",
    "nltk>=3.9.0",
    "numpy>=1.26.0",
    "ebooklib>=0.18",
    "langdetect>=1.0.9",
    "jieba>=0.42.1",
    "janome>=0.4.2",
    "pymupdf>=1.23.0",
    "requests>=2.31.0",
    "trafilatura>=1.6.0",
    "anthropic>=0.25",
    "networkx>=3.2",
    "matplotlib>=3.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.7",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.6.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.3.0",
    "python-dotenv>=1.0",
]
spacy = [
    "spacy>=3.7.0,<4.0.0",
]
share = [
    "supabase>=2.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["bookscope"]
omit = ["tests/*"]
